# github-action-setup-python-build

./: .editorconfig  .envrc  .gitignore  .gitmodules  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  Makefile  README.md  action.yaml
.github/workflows/: pr_review.yaml  pr_run_action.yaml  pr_tests.yaml
make/: test.mk
src/: install_poetry.sh  setup_env.sh
tests/: helper.bash  inline_scripts.bats  setup_env.bats
tests/project/: .gitignore  poetry.toml  pyproject.toml
tests/project/src/example/: hello.py
tests/project/tests/: test_example.py
